--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "build": {
     "appId": "com.example.psptool",
     "productName": "PSPTool",
+    "compression": "maximum",
     "files": [
       "dist/**/*",
       "node_modules/**/*",
