--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "psp_content_manager",
+  "name": "psp_cm",
   "version": "1.0.0",
   "description": "Cross-platform tool for psp filesystem manipulation",
   "main": "dist/main.js",
