--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "Cross-platform tool for psp filesystem manipulation",
   "main": "dist/main.js",
   "scripts": {
-    "build": "echo \"Building TypeScript project...\" && tsc",
-    "start": "npm run build && echo \"Starting Electron...\" && electron .",
-    "package-win": "echo \"Packaging for Windows...\" && npm run build && electron-builder --win --x64",
-    "purge": "echo \"Cleaning up...\" && rimraf release dist node_modules",
+    "build": "echo Building TypeScript project... && tsc && node copy-assets.js",
+    "start": "npm run build && echo Starting Electron... && electron .",
+    "package-win": "echo Packaging for Windows... && npm run build && npm run modclean && electron-builder --win --x64",
+    "purge": "echo Cleaning up... && rimraf release dist node_modules",
     "modclean": "modclean --run"
   },
   "build": {
@@ -15,9 +15,8 @@
     "productName": "PSP_CM",
     "files": [
       "dist/**/*",
-      "src/index.html",
-      "src/styles.css",
       "assets/**/*",
+      "!src/**/*",
       "!**/*.map",
       "!**/*.ts",
       "!**/*.d.ts",
@@ -46,8 +45,10 @@
     "@types/adm-zip": "0.5.6",
     "@types/electron": "1.6.12",
     "@types/node": "22.8.6",
+    "clean-css": "5.3.3",
     "electron": "33.0.2",
     "electron-builder": "25.1.8",
+    "html-minifier": "4.0.0",
     "modclean": "3.0.0-beta.1",
     "rimraf": "6.0.1",
     "typescript": "5.6.3"
